parser/grammar.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
toplevel' -> . toplevel [ # ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On DEF shift to state 105
-- On DATA shift to state 112
-- On CLAIM shift to state 124
-- On CASE shift to state 42
-- On toplevel shift to state 127
-- On top shift to state 128
-- On record_decl shift to state 129
-- On list(top) shift to state 134
-- On expression shift to state 131
-- On def shift to state 132
-- On claim shift to state 133
## Reductions:
-- On EOF
--   reduce production list(top) ->

State 1:
## Known stack suffix:
## TRUE
## LR(1) items:
expression -> TRUE . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> TRUE

State 2:
## Known stack suffix:
## TK_TODO
## LR(1) items:
expression -> TK_TODO . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> TK_TODO

State 3:
## Known stack suffix:
## THE
## LR(1) items:
expression -> THE . ty expression [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TY_STRING shift to state 4
-- On TY_NAT shift to state 5
-- On TY_INT shift to state 6
-- On TY_FLOAT shift to state 7
-- On LPAREN shift to state 8
-- On ty shift to state 17
## Reductions:

State 4:
## Known stack suffix:
## TY_STRING
## LR(1) items:
ty -> TY_STRING . [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW
--   reduce production ty -> TY_STRING

State 5:
## Known stack suffix:
## TY_NAT
## LR(1) items:
ty -> TY_NAT . [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW
--   reduce production ty -> TY_NAT

State 6:
## Known stack suffix:
## TY_INT
## LR(1) items:
ty -> TY_INT . [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW
--   reduce production ty -> TY_INT

State 7:
## Known stack suffix:
## TY_FLOAT
## LR(1) items:
ty -> TY_FLOAT . [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW
--   reduce production ty -> TY_FLOAT

State 8:
## Known stack suffix:
## LPAREN
## LR(1) items:
ty -> LPAREN . loption(separated_nonempty_list(COMMA,ty)) ARROW ty RPAREN [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
-- On TY_STRING shift to state 4
-- On TY_NAT shift to state 5
-- On TY_INT shift to state 6
-- On TY_FLOAT shift to state 7
-- On LPAREN shift to state 8
-- On ty shift to state 9
-- On separated_nonempty_list(COMMA,ty) shift to state 12
-- On loption(separated_nonempty_list(COMMA,ty)) shift to state 13
## Reductions:
-- On ARROW
--   reduce production loption(separated_nonempty_list(COMMA,ty)) ->

State 9:
## Known stack suffix:
## ty
## LR(1) items:
separated_nonempty_list(COMMA,ty) -> ty . [ ARROW ]
separated_nonempty_list(COMMA,ty) -> ty . COMMA separated_nonempty_list(COMMA,ty) [ ARROW ]
## Transitions:
-- On COMMA shift to state 10
## Reductions:
-- On ARROW
--   reduce production separated_nonempty_list(COMMA,ty) -> ty

State 10:
## Known stack suffix:
## ty COMMA
## LR(1) items:
separated_nonempty_list(COMMA,ty) -> ty COMMA . separated_nonempty_list(COMMA,ty) [ ARROW ]
## Transitions:
-- On TY_STRING shift to state 4
-- On TY_NAT shift to state 5
-- On TY_INT shift to state 6
-- On TY_FLOAT shift to state 7
-- On LPAREN shift to state 8
-- On ty shift to state 9
-- On separated_nonempty_list(COMMA,ty) shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## ty COMMA separated_nonempty_list(COMMA,ty)
## LR(1) items:
separated_nonempty_list(COMMA,ty) -> ty COMMA separated_nonempty_list(COMMA,ty) . [ ARROW ]
## Transitions:
## Reductions:
-- On ARROW
--   reduce production separated_nonempty_list(COMMA,ty) -> ty COMMA separated_nonempty_list(COMMA,ty)

State 12:
## Known stack suffix:
## separated_nonempty_list(COMMA,ty)
## LR(1) items:
loption(separated_nonempty_list(COMMA,ty)) -> separated_nonempty_list(COMMA,ty) . [ ARROW ]
## Transitions:
## Reductions:
-- On ARROW
--   reduce production loption(separated_nonempty_list(COMMA,ty)) -> separated_nonempty_list(COMMA,ty)

State 13:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,ty))
## LR(1) items:
ty -> LPAREN loption(separated_nonempty_list(COMMA,ty)) . ARROW ty RPAREN [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
-- On ARROW shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW
## LR(1) items:
ty -> LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW . ty RPAREN [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
-- On TY_STRING shift to state 4
-- On TY_NAT shift to state 5
-- On TY_INT shift to state 6
-- On TY_FLOAT shift to state 7
-- On LPAREN shift to state 8
-- On ty shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW ty
## LR(1) items:
ty -> LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW ty . RPAREN [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
-- On RPAREN shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW ty RPAREN
## LR(1) items:
ty -> LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW ty RPAREN . [ TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THE STRING RPAREN RBRACE LPAREN LET INT IF ID FN FLOAT FALSE EOF DEF DATA COMMA CLAIM CASE ARROW
--   reduce production ty -> LPAREN loption(separated_nonempty_list(COMMA,ty)) ARROW ty RPAREN

State 17:
## Known stack suffix:
## THE ty
## LR(1) items:
expression -> THE ty . expression [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 104
## Reductions:

State 18:
## Known stack suffix:
## STRING
## LR(1) items:
expression -> STRING . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> STRING

State 19:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . RPAREN [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
expression -> LPAREN . expression RPAREN [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On RPAREN shift to state 20
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 102
## Reductions:

State 20:
## Known stack suffix:
## LPAREN RPAREN
## LR(1) items:
expression -> LPAREN RPAREN . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> LPAREN RPAREN

State 21:
## Known stack suffix:
## LET
## LR(1) items:
expression -> LET . ID EQUALS expression SEMICOLON maybe_empty_expr [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On ID shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## LET ID
## LR(1) items:
expression -> LET ID . EQUALS expression SEMICOLON maybe_empty_expr [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On EQUALS shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## LET ID EQUALS
## LR(1) items:
expression -> LET ID EQUALS . expression SEMICOLON maybe_empty_expr [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 98
## Reductions:

State 24:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> INT

State 25:
## Known stack suffix:
## IF
## LR(1) items:
expression -> IF . expression THEN expression ELSE expression [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 93
## Reductions:

State 26:
## Known stack suffix:
## ID
## LR(1) items:
expression -> ID . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
expression -> ID . LBRACE separated_nonempty_list(COMMA,record_expr_body) RBRACE [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On LBRACE shift to state 27
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> ID
** Conflict on LBRACE

State 27:
## Known stack suffix:
## ID LBRACE
## LR(1) items:
expression -> ID LBRACE . separated_nonempty_list(COMMA,record_expr_body) RBRACE [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On ID shift to state 28
-- On separated_nonempty_list(COMMA,record_expr_body) shift to state 88
-- On record_expr_body shift to state 90
## Reductions:

State 28:
## Known stack suffix:
## ID
## LR(1) items:
record_expr_body -> ID . COLON expression [ RBRACE COMMA ]
## Transitions:
-- On COLON shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## ID COLON
## LR(1) items:
record_expr_body -> ID COLON . expression [ RBRACE COMMA ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 87
## Reductions:

State 30:
## Known stack suffix:
## FN
## LR(1) items:
expression -> FN . arg_list expression [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On LPAREN shift to state 31
-- On arg_list shift to state 39
## Reductions:

State 31:
## Known stack suffix:
## LPAREN
## LR(1) items:
arg_list -> LPAREN . loption(separated_nonempty_list(COMMA,param)) RPAREN [ TRUE TK_TODO THE STRING LPAREN LET INT IF ID FN FLOAT FALSE EQUALS CASE ]
## Transitions:
-- On ID shift to state 32
-- On separated_nonempty_list(COMMA,param) shift to state 33
-- On param shift to state 34
-- On loption(separated_nonempty_list(COMMA,param)) shift to state 37
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,param)) ->

State 32:
## Known stack suffix:
## ID
## LR(1) items:
param -> ID . [ RPAREN COMMA ]
## Transitions:
## Reductions:
-- On RPAREN COMMA
--   reduce production param -> ID

State 33:
## Known stack suffix:
## separated_nonempty_list(COMMA,param)
## LR(1) items:
loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param)

State 34:
## Known stack suffix:
## param
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param . [ RPAREN ]
separated_nonempty_list(COMMA,param) -> param . COMMA separated_nonempty_list(COMMA,param) [ RPAREN ]
## Transitions:
-- On COMMA shift to state 35
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,param) -> param

State 35:
## Known stack suffix:
## param COMMA
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA . separated_nonempty_list(COMMA,param) [ RPAREN ]
## Transitions:
-- On ID shift to state 32
-- On separated_nonempty_list(COMMA,param) shift to state 36
-- On param shift to state 34
## Reductions:

State 36:
## Known stack suffix:
## param COMMA separated_nonempty_list(COMMA,param)
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param)

State 37:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,param))
## LR(1) items:
arg_list -> LPAREN loption(separated_nonempty_list(COMMA,param)) . RPAREN [ TRUE TK_TODO THE STRING LPAREN LET INT IF ID FN FLOAT FALSE EQUALS CASE ]
## Transitions:
-- On RPAREN shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,param)) RPAREN
## LR(1) items:
arg_list -> LPAREN loption(separated_nonempty_list(COMMA,param)) RPAREN . [ TRUE TK_TODO THE STRING LPAREN LET INT IF ID FN FLOAT FALSE EQUALS CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THE STRING LPAREN LET INT IF ID FN FLOAT FALSE EQUALS CASE
--   reduce production arg_list -> LPAREN loption(separated_nonempty_list(COMMA,param)) RPAREN

State 39:
## Known stack suffix:
## FN arg_list
## LR(1) items:
expression -> FN arg_list . expression [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 86
## Reductions:

State 40:
## Known stack suffix:
## FLOAT
## LR(1) items:
expression -> FLOAT . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> FLOAT

State 41:
## Known stack suffix:
## FALSE
## LR(1) items:
expression -> FALSE . [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
## Reductions:
-- On TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE
--   reduce production expression -> FALSE

State 42:
## Known stack suffix:
## CASE
## LR(1) items:
expression -> CASE . expression LBRACE separated_nonempty_list(COMMA,case_expr_body) RBRACE [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## CASE expression
## LR(1) items:
expression -> expression . expr_list [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
expression -> expression . SEMICOLON expression [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
expression -> expression . DOT ID [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
expression -> CASE expression . LBRACE separated_nonempty_list(COMMA,case_expr_body) RBRACE [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
expression -> expression . PLUS expression [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
expression -> expression . MINUS expression [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
expression -> expression . STAR expression [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
expression -> expression . DIV expression [ STAR SEMICOLON PLUS MINUS LPAREN LBRACE DOT DIV ]
## Transitions:
-- On STAR shift to state 44
-- On SEMICOLON shift to state 46
-- On PLUS shift to state 48
-- On MINUS shift to state 55
-- On LPAREN shift to state 50
-- On LBRACE shift to state 64
-- On DOT shift to state 57
-- On DIV shift to state 59
-- On expr_list shift to state 61
## Reductions:

State 44:
## Known stack suffix:
## expression STAR
## LR(1) items:
expression -> expression STAR . expression [ TRUE TK_TODO THEN THE STRING STAR SEMICOLON RPAREN RBRACE PLUS MINUS LPAREN LET LBRACE INT IF ID FN FLOAT FALSE EOF ELSE DOT DIV DEF DATA COMMA CLAIM CASE ]
## Transitions:
-- On TRUE shift to state 1
-- On TK_TODO shift to state 2
-- On THE shift to state 3
-- On STRING shift to state 18
-- On LPAREN shift to state 19
-- On LET shift to state 21
-- On INT shift to state 24
-- On IF shift to state 25
-- On ID shift to state 26
-- On FN shift to state 30
-- On FLOAT shift to state 40
-- On FALSE shift to state 41
-- On CASE shift to state 42
-- On expression shift to state 45
## Reductions:
